--- a/src/client/index.pug
+++ b/src/client/index.pug
@@ -5,3 +5,4 @@ html
     meta(name="viewport", content="width=device-width, initial-scale=1")
     title= APP_NAME
   body
+    h1 New Project Boilerplate!
